// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rangeSlider widget usage max option will use the results min when only max is passed 1`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={100}
  min={1}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      1,
      100,
    ]
  }
/>
`;

exports[`rangeSlider widget usage min option sets the right range 1`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={200}
  min={100}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      100,
      200,
    ]
  }
/>
`;

exports[`rangeSlider widget usage min option will use the results max when only min passed 1`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={5000}
  min={100}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      100,
      5000,
    ]
  }
/>
`;

exports[`rangeSlider widget usage should render without results 1`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider root cx",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={0}
  min={0}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      0,
      0,
    ]
  }
/>
`;

exports[`rangeSlider widget usage with results calls twice ReactDOM.render 1`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={5000}
  min={1}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      1,
      5000,
    ]
  }
/>
`;

exports[`rangeSlider widget usage with results calls twice ReactDOM.render 2`] = `
<Slider
  cssClasses={
    Object {
      "disabledRoot": "ais-RangeSlider--disabled",
      "handle": "ais-RangeSlider-handle",
      "lowerHandle": "ais-RangeSlider-handle--lower",
      "root": "ais-RangeSlider",
      "tooltip": "ais-RangeSlider-tooltip",
      "upperHandle": "ais-RangeSlider-handle--upper",
    }
  }
  max={5000}
  min={1}
  pips={true}
  refine={[Function]}
  step={1}
  tooltips={true}
  values={
    Array [
      1,
      5000,
    ]
  }
/>
`;
